# onnix-model-project

./: .gitignore  README.md  pyproject.toml
src/: export_onnx_model.py  main.py
src/onnx_model_project/: __init__.py  export_model.py  inference.py  utils.py
tests/: test_export_model.py  test_inference.py
