[project]
name = "onnx-model-project"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "hiraoku.shinichi", email = "s.hiraoku@gmail.com" }
]
dependencies = [
    "transformers>=4.46.2",
    "onnx>=1.17.0",
    "onnxruntime>=1.20.0",
    "onnxconverter-common>=1.14.0",
    "torch>=2.5.1",
    "fugashi>=1.4.0",
    "unidic-lite>=1.0.8",
    "git-filter-repo>=2.45.0",
    "pytest>=8.3.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/onnx_model_project"]

[tool.mypy]
plugins = []
ignore_missing_imports = true

[tool.ruff]
line-length = 88
lint.select = ["E", "F", "W"]
lint.ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--maxfail=3 --disable-warnings"